cam_streaming/build/log/idf_py_stdout_output_3030
Command: ninja flash
[1/10] Performing build step for 'bootloader'
[1/1] cd /home/atoth/EspCam4011/cam_streaming/build/bootloader/esp-idf/esptool_py && /home/atoth/.espressif/python_env/idf6.0_py3.10_env/bin/python /home/atoth/EspCam4011/esp-idf/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 /home/atoth/EspCam4011/cam_streaming/build/bootloader/bootloader.bin
Bootloader binary size 0x6680 bytes. 0x980 bytes (8%) free.
[2/8] Building C object esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj
FAILED: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj 
/home/atoth/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/bin/xtensa-esp32-elf-gcc -DESP_PLATFORM -DIDF_VER=\"v5.5-dev-3703-gf9765d0316\" -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -DSOC_XTAL_FREQ_MHZ=CONFIG_XTAL_FREQ -D_GLIBCXX_HAVE_POSIX_SEMAPHORE -D_GLIBCXX_USE_POSIX_SEMAPHORE -D_GNU_SOURCE -D_POSIX_READER_WRITER_LOCKS -I/home/atoth/EspCam4011/cam_streaming/build/config -I/home/atoth/EspCam4011/cam_streaming/main -I/home/atoth/EspCam4011/esp-idf/components/newlib/platform_include -I/home/atoth/EspCam4011/esp-idf/components/freertos/config/include -I/home/atoth/EspCam4011/esp-idf/components/freertos/config/include/freertos -I/home/atoth/EspCam4011/esp-idf/components/freertos/config/xtensa/include -I/home/atoth/EspCam4011/esp-idf/components/freertos/FreeRTOS-Kernel/include -I/home/atoth/EspCam4011/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -I/home/atoth/EspCam4011/esp-idf/components/freertos/FreeRTOS-Kernel/portable/xtensa/include/freertos -I/home/atoth/EspCam4011/esp-idf/components/freertos/esp_additions/include -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/include -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/include/soc -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/include/soc/esp32 -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/dma/include -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/ldo/include -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/debug_probe/include -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/mspi_timing_tuning/include -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/power_supply/include -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/port/esp32/. -I/home/atoth/EspCam4011/esp-idf/components/esp_hw_support/port/esp32/include -I/home/atoth/EspCam4011/esp-idf/components/heap/include -I/home/atoth/EspCam4011/esp-idf/components/heap/tlsf -I/home/atoth/EspCam4011/esp-idf/components/log/include -I/home/atoth/EspCam4011/esp-idf/components/soc/include -I/home/atoth/EspCam4011/esp-idf/components/soc/esp32 -I/home/atoth/EspCam4011/esp-idf/components/soc/esp32/include -I/home/atoth/EspCam4011/esp-idf/components/soc/esp32/register -I/home/atoth/EspCam4011/esp-idf/components/hal/platform_port/include -I/home/atoth/EspCam4011/esp-idf/components/hal/esp32/include -I/home/atoth/EspCam4011/esp-idf/components/hal/include -I/home/atoth/EspCam4011/esp-idf/components/esp_rom/include -I/home/atoth/EspCam4011/esp-idf/components/esp_rom/esp32/include -I/home/atoth/EspCam4011/esp-idf/components/esp_rom/esp32/include/esp32 -I/home/atoth/EspCam4011/esp-idf/components/esp_rom/esp32 -I/home/atoth/EspCam4011/esp-idf/components/esp_common/include -I/home/atoth/EspCam4011/esp-idf/components/esp_system/include -I/home/atoth/EspCam4011/esp-idf/components/esp_system/port/soc -I/home/atoth/EspCam4011/esp-idf/components/esp_system/port/include/private -I/home/atoth/EspCam4011/esp-idf/components/xtensa/esp32/include -I/home/atoth/EspCam4011/esp-idf/components/xtensa/include -I/home/atoth/EspCam4011/esp-idf/components/xtensa/deprecated_include -I/home/atoth/EspCam4011/esp-idf/components/lwip/include -I/home/atoth/EspCam4011/esp-idf/components/lwip/include/apps -I/home/atoth/EspCam4011/esp-idf/components/lwip/include/apps/sntp -I/home/atoth/EspCam4011/esp-idf/components/lwip/lwip/src/include -I/home/atoth/EspCam4011/esp-idf/components/lwip/port/include -I/home/atoth/EspCam4011/esp-idf/components/lwip/port/freertos/include -I/home/atoth/EspCam4011/esp-idf/components/lwip/port/esp32xx/include -I/home/atoth/EspCam4011/esp-idf/components/lwip/port/esp32xx/include/arch -I/home/atoth/EspCam4011/esp-idf/components/lwip/port/esp32xx/include/sys -I/home/atoth/EspCam4011/esp-idf/components/esp_event/include -I/home/atoth/EspCam4011/esp-idf/components/nvs_flash/include -I/home/atoth/EspCam4011/esp-idf/components/esp_partition/include -I/home/atoth/EspCam4011/esp-idf/components/esp_netif/include -I/home/atoth/EspCam4011/esp-idf/components/esp_wifi/include -I/home/atoth/EspCam4011/esp-idf/components/esp_wifi/include/local -I/home/atoth/EspCam4011/esp-idf/components/esp_wifi/wifi_apps/include -I/home/atoth/EspCam4011/esp-idf/components/esp_wifi/wifi_apps/nan_app/include -I/home/atoth/EspCam4011/esp-idf/components/esp_phy/include -I/home/atoth/EspCam4011/esp-idf/components/esp_phy/esp32/include -I/home/atoth/EspCam4011/esp-idf/components/esp_http_server/include -I/home/atoth/EspCam4011/esp-idf/components/http_parser -I/home/atoth/EspCam4011/cam_streaming/managed_components/espressif__esp32-camera/driver/include -I/home/atoth/EspCam4011/cam_streaming/managed_components/espressif__esp32-camera/conversions/include -I/home/atoth/EspCam4011/esp-idf/components/driver/deprecated -I/home/atoth/EspCam4011/esp-idf/components/driver/i2c/include -I/home/atoth/EspCam4011/esp-idf/components/driver/touch_sensor/include -I/home/atoth/EspCam4011/esp-idf/components/driver/twai/include -I/home/atoth/EspCam4011/esp-idf/components/driver/touch_sensor/esp32/include -I/home/atoth/EspCam4011/esp-idf/components/esp_pm/include -I/home/atoth/EspCam4011/esp-idf/components/esp_ringbuf/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_gpio/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_pcnt/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_gptimer/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_spi/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_mcpwm/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_ana_cmpr/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_i2s/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_sdmmc/include -I/home/atoth/EspCam4011/esp-idf/components/sdmmc/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_sdspi/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_sdio/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_dac/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_rmt/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_tsens/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_sdm/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_i2c/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_uart/include -I/home/atoth/EspCam4011/esp-idf/components/vfs/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_ledc/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_parlio/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_usb_serial_jtag/include -I/home/atoth/EspCam4011/esp-idf/components/esp_driver_twai/include -mlongcalls -Wno-frame-address  -fno-builtin-memcpy -fno-builtin-memset -fno-builtin-bzero -fno-builtin-stpcpy -fno-builtin-strncpy -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=unused-but-set-variable -Wno-error=deprecated-declarations -Wextra -Wno-error=extra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -mdisable-hardware-atomics -mfix-esp32-psram-cache-issue -mfix-esp32-psram-cache-strategy=memw -Og -fno-shrink-wrap -fmacro-prefix-map=/home/atoth/EspCam4011/cam_streaming=. -fmacro-prefix-map=/home/atoth/EspCam4011/esp-idf=/IDF -fstrict-volatile-bitfields -fno-jump-tables -fno-tree-switch-conversion -std=gnu17 -Wno-old-style-declaration -MD -MT esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -MF esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj.d -o esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj -c /home/atoth/EspCam4011/cam_streaming/main/main.c
/home/atoth/EspCam4011/cam_streaming/main/main.c:1:7: error: expected '=', ',', ';', 'asm' or '__attribute__' before '-' token
    1 | Camera-Code
      |       ^
In file included from /home/atoth/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/stdint.h:14,
                 from /home/atoth/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/lib/gcc/xtensa-esp-elf/14.2.0/include/stdint.h:9,
                 from /home/atoth/EspCam4011/esp-idf/components/esp_common/include/esp_err.h:9,
                 from /home/atoth/EspCam4011/cam_streaming/managed_components/espressif__esp32-camera/driver/include/esp_camera.h:69,
                 from /home/atoth/EspCam4011/cam_streaming/main/main.c:2:
/home/atoth/.espressif/tools/xtensa-esp-elf/esp-14.2.0_20241119/xtensa-esp-elf/xtensa-esp-elf/include/sys/_stdint.h:20:9: error: unknown type name '__int8_t'; did you mean '__uint8_t'?
   20 | typedef __int8_t int8_t ;
      |         ^~~~~~~~
      |         __uint8_t
ninja: build stopped: subcommand failed.
